# skysync

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindPicoquic.cmake
src/: adler_rollsum.c  adler_rollsum.h  fastcdc.cpp  fastcdc.h  parallel_cdc.cpp  parallel_cdc.h  parallel_matcher.cpp  parallel_matcher.h  ring_buffer.c  ring_buffer.h  rsyncx.c  rsyncx.h  simd_checksum_avx2.S  simd_checksum_avx2.cpp  simd_checksum_avx2.h  skysync_c.cpp  skysync_c.h  skysync_f.cpp  skysync_f.h  tools.cpp
src/crc32/: crc32.c  crc32.h  crc32c.c  crc32c.h
src/net/: curl_client.cpp  dsync_client.cpp  dsync_server.cpp  echo.proto  net.h  rpc.h  rpc_client.cpp  rpc_client_serial.cpp  rpc_server.cpp  rpc_server_serial.cpp  sync_ep.h
src/parasync/: chunker.cpp  chunker.h  dsync_worker.cpp  dsync_worker.h  parasync_common.h  parasync_worker.cpp  parasync_worker.h  pdsync_worker.cpp  pdsync_worker.h  smatcher.cpp  smatcher.h  wmatcher.cpp  wmatcher.h
src/thread/: perf_pool.cpp
tests/: checksum_test.cpp  crc32_rolling_test.c  crc32c_test.cpp  crc_rolling_test.c  curl_client_test.cpp  file_checksum_test.cpp  fio_test.sh  http_post_delta.cpp  http_post_fastfp.cpp  http_receiver_test.cpp  http_sender.sh  lsquic_tut.c  lz4_compress.sh  sha256_speed_test.cpp
tests/dsync/: dsync_test.bup  dsync_test.cpp  fastcdc_latency_test.sh  fastfp_test.c
tests/parasync/: dsync_task_test.cpp  dsync_task_test.sh  parallel_cdc_test.cpp  parallel_cdc_test.sh  parasync_task_test.cpp  parasync_task_test.sh  pdsync_task_test.cpp  pdsync_task_test.sh  set_cpu_freq.sh
tests/rsync/: rsync_latency_test.sh  rsync_test.c
tests/rsyncx/: README.md  delta_test.c  dump_test.c  patch_test.c  rsyncx_latency_test.sh
tests/skysync-c/: skysync_c_latency_test.sh  skysync_c_test.bup  skysync_c_test.cpp
tests/skysync-f/: skysync_f_latency_test.sh  skysync_f_test.cpp
